--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -835,7 +835,7 @@ body.search-open {
   margin-bottom: 10px;
 }
 .menu-sub .menu-item {
-  margin-right: 12px;
+  margin-left: 12px;
   line-height: 1.3;
 }
 .menu-sub .menu-item:last-child {
